--- a/javaScript_II/aula_05_getElementByTagName/index.html
+++ b/javaScript_II/aula_05_getElementByTagName/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-    <input id="main-input" placeholder="Digite aqui" name="nome-completo">
+    <input id="main-input" placeholder="Digite aqui">
     <p class="paragraph-js">Começando nossa Jornada para aprender</p>
     <p class="paragraph-js">A linguagem de Programação mais versátil do mundo</p>
     <button class="main-button">Clique aqui</button>
 </body>
-<script src="./getElementByName.js"></script>
+<script src="./getElementByTagName.js"></script>
 <style>
     h1 {
         color: #2102B8;
