--- a/javaScript_II/aula_11_conversor_de_moedas/index.html
+++ b/javaScript_II/aula_11_conversor_de_moedas/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
-    <script src="./scripts.js"></script>
+
     <title>DevClub - Convert Money</title>
   </head>
   <body>
@@ -30,35 +30,36 @@
 
       <label>
         Converter <b>para</b>
-        <select>
-          <option>US$ Dólar americano</option>
-          <option>€ Euro</option>
-          <option>£ Libra</option>
+        <select class="currency-select">
+          <option value="dolar">US$ Dólar americano</option>
+          <option value="euro">€ Euro</option>
+          <option value="libra">£ Libra</option>
         </select>
       </label>
 
       <label>
         Valor
-        <input placeholder="R$ 10.000,00" />
+        <input class="input-currency" placeholder="R$ 10.000,00" />
       </label>
 
-      <button>Converter</button>
+      <button class="convert-button">Converter</button>
 
       <section>
         <div class="currency-box">
           <img src="./assets/real.png" alt="" />
           <p class="currency">Real</p>
-          <p class="currency-value">R$ 0,00</p>
+          <p class="currency-value-to-convert">R$ 0,00</p>
         </div>
 
         <img class="arrow-img" src="./assets/arrow.png" alt="seta" />
 
         <div class="currency-box">
-          <img src="./assets/dolar.png" alt="logo-moeda-convertida" />
-          <p class="currency">Dólar</p>
+          <img class="currency-img" src="./assets/dolar.png" alt="logo-moeda-convertida" />
+          <p class="currency" id="currency-name">Dólar americano</p>
           <p class="currency-value">US$ 0.00</p>
         </div>
       </section>
     </main>
   </body>
+  <script src="./scripts.js"></script>
 </html>
